--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,99 @@ html {
     font-size: 100%;
     color: black;
 }
+
+
+.container {
+    background-color: #00ffff;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+}
+
+.inner-container {
+    width: 75%;
+    height: 75%;
+    margin: auto;
+    background-color: #ffffff;
+    border-radius: 15px;
+    padding: 3em;
+}
+
+.header {
+    height: 100px;
+}
+
+main {
+    height: calc(100% - 100px);
+}
+
+.add-to-do {
+    margin: 10px 0;
+}
+
+.input {
+    border: 1px solid grey;
+    border-radius: 1.5em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    height: 50px;
+}
+
+.input:focus-within {
+    border-color: violet;
+}
+
+.input input {
+    width: calc(100% - 4em);
+    border-style: none;
+    outline: none;
+}
+
+.input i {
+    font-size: 1.5em;
+}
+
+ul {
+    list-style-type: none;
+}
+
+i {
+    cursor: pointer;
+}
+
+.todo-text {
+    display: flex;
+}
+
+.todo-list li {
+    padding: 1em;
+    background: linear-gradient(90deg,#87b7ff, #2974e5);
+    border-radius: 15px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.todo-list {
+    height: calc(100% - 50px);
+    overflow-y: auto;
+}
+
+.todo-list .todo-text {
+    width: calc(100% - 1.5em);
+}
+
+.todo-list i {
+    font-size: 1.5em;
+}
+
+.todo-list h3 {
+    margin-left: 1em;
+}
+
+h3.line-through {
+    text-decoration: line-through;
+}
