--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 
 
 .container {
-    background-color: #00ffff;
+    background-color: yellowgreen;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -39,7 +39,7 @@ main {
 }
 
 .input {
-    border: 1px solid grey;
+    border: 1px solid black;
     border-radius: 1.5em;
     display: flex;
     justify-content: space-around;
@@ -49,7 +49,7 @@ main {
 }
 
 .input:focus-within {
-    border-color: violet;
+    border-color: black;
 }
 
 .input input {
@@ -76,7 +76,7 @@ i {
 
 .todo-list li {
     padding: 1em;
-    background: linear-gradient(90deg,#87b7ff, #2974e5);
+    background: linear-gradient(90deg,darkgrey, darkgreen);
     border-radius: 15px;
     margin-bottom: 10px;
     display: flex;
